@@ -185,6 +185,12 @@ menu_items = homepage.get_children().live().in_menu()
 
     .. automethod:: not_public
 
+    .. automethod:: private
+
+    .. versionadded:: 4.1
+
+        The ``private`` method was added as an alias of ``not_public``.
+
     .. automethod:: search
 
         See: :ref:`wagtailsearch_searching_pages`
