@@ -14,9 +14,12 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
 ### Other features
 
  * Add basic keyboard control and screen reader support for page listing re-ordering (Paarth Agarwal, Thomas van der Hoeven)
+ * Add `PageQuerySet.private` method as an alias of `not_public` (Mehrdad Moradizadeh)
 
 
 ### Bug fixes
+
+ * Prevent `PageQuerySet.not_public` from returning all pages when no page restrictions exist (Mehrdad Moradizadeh)
 
 
 ## Upgrade considerations
